#9 Added enums ExtraDataFieldType, ImportEntityType, NotificationMessageType, TicketMessageType

--- a/docs/api-reference/CRMScript.NetServer.NSImportLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportLine.yml
@@ -108,14 +108,14 @@ items:
   nameWithType: NSImportLine.GetType()
   fullName: CRMScript.NetServer.NSImportLine.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Person</li><li>Enum: 2 = Contact</li><li>Enum: 4 = Product</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Which entity type will be created? This is a read-only property
+      description: Which entity type will be created? This is a read-only property. See <xref href=\"ImportEntityType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSImportLine thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportLine.GetValues()
@@ -221,7 +221,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: Which entity type will be created? This is a read-only property. See enum type.
+      description: Which entity type will be created? This is a read-only property. See <xref href=\"ImportEntityType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -299,3 +299,10 @@ references:
   name: ImportAction
   nameWithType: ImportAction
   fullName: CRMScript.NetServer.ImportAction
+- uid: CRMScript.NetServer.ImportEntityType
+  commentId: T:CRMScript.NetServer.ImportEntityType
+  parent: SuperOffice.Data
+  isExternal: true
+  name: ImportEntityType
+  nameWithType: ImportEntityType
+  fullName: CRMScript.NetServer.ImportEntityType
