--- a/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
@@ -218,14 +218,14 @@ items:
   nameWithType: NSPocketNotificationMessage.GetType()
   fullName: CRMScript.NetServer.NSPocketNotificationMessage.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Message</li><li>Enum: 1 = ImportantMessage</li><li>Enum: 2 = RemoteAction</li><li>Enum: 3 = YesNoQuestion</li><li>Enum: 4 = ShowWebPage</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The type of notification this is
+      description: The type of notification this is. See <xref href=\"NotificationMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPocketNotificationMessage thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketNotificationMessage.GetUrl()
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: The type of notification this is. See enum type.
+      description: The type of notification this is. See <xref href=\"NotificationMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -517,3 +517,10 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.NotificationMessageType
+  commentId: T:CRMScript.NetServer.NotificationMessageType
+  parent: SuperOffice.Data
+  isExternal: true
+  name: NotificationMessageType
+  nameWithType: NotificationMessageType
+  fullName: CRMScript.NetServer.NotificationMessageType
