--- a/docs/api-reference/CRMScript.NetServer.NSProductExtraDataField.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProductExtraDataField.yml
@@ -64,14 +64,14 @@ items:
   nameWithType: NSProductExtraDataField.GetType()
   fullName: CRMScript.NetServer.NSProductExtraDataField.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = String</li><li>Enum: 1 = Url</li><li>Enum: 2 = Image</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: String, url, image. How the value should be interpreted.
+      description: String, URL, image. How the value should be interpreted. See <xref href=\"ExtraDataFieldType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSProductExtraDataField thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProductExtraDataField.GetValue()
@@ -133,7 +133,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: String, url, image. How the value should be interpreted. See enum type.
+      description: String, URL, image. How the value should be interpreted. See <xref href=\"ExtraDataFieldType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -185,3 +185,10 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ExtraDataFieldType
+  commentId: T:CRMScript.NetServer.ExtraDataFieldType
+  parent: SuperOffice.Data
+  isExternal: true
+  name: ExtraDataFieldType
+  nameWithType: ExtraDataFieldType
+  fullName: CRMScript.NetServer.ExtraDataFieldType
