--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -328,7 +328,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: See enum type.
+      description: See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSRoleEntity
   example: 
@@ -1693,7 +1693,7 @@ items:
   nameWithType: NSUserAgent.MakeRetired(Integer,Bool)
   fullName: CRMScript.NetServer.NSUserAgent.MakeRetired(Integer,Bool)
   type: Method
-  summary: "\nRetiring a user means to remove all licenses, setting person.retired=1 and associate.deleted=1. Un-retiering a user means setting  person.retired=0 and associate.deleted=0\n"
+  summary: "\nRetiring a user means to remove all licenses, setting person.retired=1 and associate.deleted=1. Un-retiring a user means setting  person.retired=0 and associate.deleted=0\n"
   remarks: 
   syntax: 
     content: Void MakeRetired(Integer associateId, Bool retired)
