--- a/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfoAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfoAgent.yml
@@ -590,14 +590,14 @@ items:
   nameWithType: NSUserDefinedFieldInfoAgent.IsPublishEventActive(Integer)
   fullName: CRMScript.NetServer.NSUserDefinedFieldInfoAgent.IsPublishEventActive(Integer)
   type: Method
-  summary: "\nChecks if the publish event is active for the given type\n"
+  summary: "\nChecks if the publish event is active for the given type.\n"
   remarks: 
   syntax: 
     content: Bool IsPublishEventActive(Integer type)
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: See enum type.
+      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Bool
       description:
