--- a/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
@@ -200,14 +200,14 @@ items:
   nameWithType: NSWindowPosSize.GetState()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetState()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Normal</li><li>Enum: 1 = Maximized</li><li>Enum: 2 = Minimized</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetState()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Normal = 0, Maximized = 1, Minimized = 2
+      description: Normal = 0, Maximized = 1, Minimized = 2. See <xref href=\"CRMScript.NetServer.ShowState\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSWindowPosSize thing;\nInteger state = thing.GetState();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWindowPosSize.GetUpperY()
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: state
       type: CRMScript.Global.Integer
-      description: Normal = 0, Maximized = 1, Minimized = 2 See enum state.
+      description: Normal = 0, Maximized = 1, Minimized = 2 See <xref href=\"CRMScript.NetServer.ShowState\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -537,3 +537,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ShowState
+  commentId: T:CRMScript.NetServer.ShowState
+  isExternal: true
+  name: ShowState
+  nameWithType: ShowState
+  fullName: CRMScript.NetServer.ShowState
