--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -44,17 +44,20 @@ items:
   - CRMScript.NetServer.EventHandlerType
   - CRMScript.NetServer.ExecuteOnEvent
   - CRMScript.NetServer.ExternalUserInfoModification
+  - CRMScript.NetServer.ExtraDataFieldType
   - CRMScript.NetServer.FieldAccess
   - CRMScript.NetServer.FieldMetadataType
   - CRMScript.NetServer.FormSubmissionStatus
   - CRMScript.NetServer.FreeTextOperator
   - CRMScript.NetServer.GeneratorEncoding
   - CRMScript.NetServer.ImportAction
+  - CRMScript.NetServer.ImportEntityType
   - CRMScript.NetServer.InvitationStatus
   - CRMScript.NetServer.LicenseStatus
   - CRMScript.NetServer.LocalizedTextType
   - CRMScript.NetServer.MailboxType
   - CRMScript.NetServer.Navigation
+  - CRMScript.NetServer.NotificationMessageType
   - CRMScript.NetServer.NotificationPlatform
   - CRMScript.NetServer.NSAccessGatewayInfo
   - CRMScript.NetServer.NSActivityFilter
@@ -446,6 +449,7 @@ items:
   - CRMScript.NetServer.TicketCategoryClosingStatus
   - CRMScript.NetServer.TicketCategoryDelegateMethod
   - CRMScript.NetServer.TicketMessageCategory
+  - CRMScript.NetServer.TicketMessageType
   - CRMScript.NetServer.TicketOrigin
   - CRMScript.NetServer.TicketPriorityEscalateEvent
   - CRMScript.NetServer.TicketReadStatus
@@ -1354,6 +1358,12 @@ references:
   name: ExecuteOnEvent
   nameWithType: ExecuteOnEvent
   fullName: CRMScript.NetServer.ExecuteOnEvent
+- uid: CRMScript.NetServer.ExtraDataFieldType
+  commentId: T:CRMScript.NetServer.ExtraDataFieldType
+  isExternal: true
+  name: ExtraDataFieldType
+  nameWithType: ExtraDataFieldType
+  fullName: CRMScript.NetServer.ExtraDataFieldType
 - uid: CRMScript.NetServer.ShipmentAddrStatus
   commentId: T:CRMScript.NetServer.ShipmentAddrStatus
   isExternal: true
@@ -1666,6 +1676,12 @@ references:
   name: ImportAction
   nameWithType: ImportAction
   fullName: CRMScript.NetServer.ImportAction
+- uid: CRMScript.NetServer.ImportEntityType
+  commentId: T:CRMScript.NetServer.ImportEntityType
+  isExternal: true
+  name: ImportEntityType
+  nameWithType: ImportEntityType
+  fullName: CRMScript.NetServer.ImportEntityType
 - uid: CRMScript.NetServer.NSIncomingMessage
   commentId: T:CRMScript.NetServer.NSIncomingMessage
   isExternal: true
@@ -1984,6 +2000,12 @@ references:
   name: NSPocketDeviceInfo
   nameWithType: NSPocketDeviceInfo
   fullName: CRMScript.NetServer.NSPocketDeviceInfo
+- uid: CRMScript.NetServer.NotificationMessageType
+  commentId: T:CRMScript.NetServer.NotificationMessageType
+  isExternal: true
+  name: NotificationMessageType
+  nameWithType: NotificationMessageType
+  fullName: CRMScript.NetServer.NotificationMessageType
 - uid: CRMScript.NetServer.NotificationPlatform
   commentId: T:CRMScript.NetServer.NotificationPlatform
   isExternal: true
@@ -2974,6 +2996,12 @@ references:
   name: TicketMessageCategory
   nameWithType: TicketMessageCategory
   fullName: CRMScript.NetServer.TicketMessageCategory
+- uid: CRMScript.NetServer.TicketMessageType
+  commentId: T:CRMScript.NetServer.TicketMessageType
+  isExternal: true
+  name: TicketMessageType
+  nameWithType: TicketMessageType
+  fullName: CRMScript.NetServer.TicketMessageType
 - uid: CRMScript.NetServer.NSTicketPriority
   commentId: T:CRMScript.NetServer.NSTicketPriority
   isExternal: true
