--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -878,7 +878,7 @@ items:
       href: CRMScript.NetServer.AssignmentStatus.yml
     - name: AssociateType
       href: CRMScript.NetServer.AssociateType.yml
-    - name: Enum BatchTaskState
+    - name: BatchTaskState
       href: CRMScript.NetServer.BatchTaskState.yml
     - name: BlobLinkType
       href: CRMScript.NetServer.BlobLinkType.yml
@@ -892,7 +892,7 @@ items:
       href: CRMScript.NetServer.CalReplyStatus.yml
     - name: ChatSessionFlags
       href: CRMScript.NetServer.ChatSessionFlags.yml
-    - name: Enum ChatSessionStatus
+    - name: ChatSessionStatus
       href: CRMScript.NetServer.ChatSessionStatus.yml
     - name: ChatWidgetSize
       href: CRMScript.NetServer.ChatWidgetSize.yml
@@ -924,8 +924,6 @@ items:
       href: CRMScript.NetServer.DurationUnit.yml
     - name: EMailMergeTargetType
       href: CRMScript.NetServer.EMailMergeTargetType.yml
-    - name: Enum entity
-      href: CRMScript.NetServer.entity.yml
     - name: ErpActorType
       href: CRMScript.NetServer.ErpActorType.yml
     - name: EMailPriority
@@ -938,6 +936,8 @@ items:
       href: CRMScript.NetServer.ExecuteOnEvent.yml
     - name: ExternalUserInfoModification
       href: CRMScript.NetServer.ExternalUserInfoModification.yml
+    - name: ExtraDataFieldType
+      href: CRMScript.NetServer.ExtraDataFieldType.yml
     - name: FieldAccess
       href: CRMScript.NetServer.FieldAccess.yml
     - name: FieldMetadataType
@@ -951,7 +951,9 @@ items:
     - name: GeneratorEncoding
       href: CRMScript.NetServer.GeneratorEncoding.yml
     - name: ImportAction
-      href: CRMScript.NetServer.ImportAction.yml
+      href: CRMScript.NetServer.ImportEntityType.yml
+    - name: ImportAction
+      href: CRMScript.NetServer.ImportEntityType.yml
     - name: InvitationStatus
       href: CRMScript.NetServer.InvitationStatus.yml
     - name: LicenseStatus
@@ -962,6 +964,8 @@ items:
       href: CRMScript.NetServer.Navigation.yml
     - name: OrderBySortType
       href: CRMScript.NetServer.OrderBySortType.yml
+    - name: NotificationMessageType
+      href: CRMScript.NetServer.NotificationMessageType.yml
     - name: NotificationPlatform
       href: CRMScript.NetServer.NotificationPlatform.yml
     - name: PrefDescAccessFlags
@@ -1026,6 +1030,8 @@ items:
       href: CRMScript.NetServer.TicketCategoryDelegateMethod.yml
     - name: TicketMessageCategory
       href: CRMScript.NetServer.TicketMessageCategory.yml
+    - name: TicketMessageType
+      href: CRMScript.NetServer.TicketMessageType.yml
     - name: TicketOrigin
       href: CRMScript.NetServer.TicketOrigin.yml
     - name: TicketPriorityEscalateEvent
